# waft

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  PKGBUILD  README.md  TODO.md  clippy.toml  default.toml  package-lock.json  package.json  rustfmt.toml  spin.sh
crates/client/: Cargo.toml
crates/client/src/: connection.rs  connection_task.rs  entity_store.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: dbus.rs  lib.rs  menu_state.rs  store.rs
crates/overview/: Cargo.toml  default.toml
crates/overview/locales/cs-CZ/: main.ftl
crates/overview/locales/en-US/: main.ftl
crates/overview/src/: README.md  app.rs  calendar_selection.rs  common.rs  config.rs  daemon_spawner.rs  daemon_widget_converter.rs  daemon_widget_reconciler.rs  dbus.rs  entity_renderer.rs  entity_store.rs  lib.rs  main.rs  menu_state.rs  plugin.rs  plugin_registry.rs  store.rs  waft_client.rs
crates/overview/src/components/: agenda.rs  audio_sliders.rs  battery.rs  brightness_sliders.rs  calendar.rs  claude.rs  clock.rs  entity_keyed_base.rs  events.rs  keyboard_layout.rs  mod.rs  notification_card.rs  notification_group.rs  notification_list.rs  notification_markup.rs  right_column_stack.rs  session_actions.rs  settings_button.rs  system_actions.rs  throttled_sender.rs  weather.rs
crates/overview/src/features/: mod.rs
crates/overview/src/i18n/: mod.rs
crates/overview/src/ipc/: mod.rs  net.rs
crates/overview/src/layout/: compositor.rs  default.xml  mod.rs  model.rs  parser.rs  renderer.rs  types.rs
crates/overview/src/plugin_manager/: client.rs  diff.rs  discovery.rs  manager.rs  mod.rs  registry.rs  router.rs
crates/overview/src/ui/: battery.rs  claude_usage.rs  clock.rs  failed_widget.rs  feature_grid.rs  feature_toggle.rs  icon.rs  icon_tests.rs  main_window.rs  menu_chevron.rs  (+5 more)
crates/overview/tests/: ipc_integration_test.rs  plugin_ipc_integration.rs
crates/plugin/: Cargo.toml
crates/plugin-api/: Cargo.toml
crates/plugin-api/src/: common.rs  i18n.rs  loader.rs
crates/plugin-sdk/: Cargo.toml  README.md
crates/plugin-sdk/examples/: simple_plugin.rs  socket_latency_test.rs
crates/plugin-sdk/src/: builder.rs  config.rs  daemon.rs  dbus_monitor.rs  lib.rs  server.rs  testing.rs
crates/plugin-sdk/tests/: error_scenarios.rs  widget_integration_tests.rs
crates/plugin/src/: claim.rs  config.rs  dbus_monitor.rs  dbus_proxy.rs  lib.rs  manifest.rs  notifier.rs  plugin.rs  poison_recovery.rs  runner.rs  runtime.rs  state_locker.rs  transport.rs
crates/settings/: Cargo.toml  README.md
crates/settings/src/: app.rs  entity_list_group.rs  i18n.rs  kdl_config.rs  kdl_niri_windows.rs  main.rs  page_layout.rs  prefs.rs  search_index.rs  search_results.rs  sidebar.rs  subscription.rs  window.rs
crates/toasts/: Cargo.toml  style.css
crates/toasts/src/: app.rs  main.rs  toast_manager.rs  waft_client.rs
crates/waft/: Cargo.toml  README.md
crates/waft-plugin-api/: Cargo.toml
crates/waft-plugin-api/src/: lib.rs  overview.rs
crates/waft-ui-gtk/: Cargo.toml
crates/waft-ui-gtk/examples/: dynamic_updates.rs  menu_coordination.rs  widget_test_app.rs
crates/waft-ui-gtk/src/: css.rs  lib.rs  menu_state.rs  reconcile.rs  renderer.rs  test_init.rs  test_utils.rs  types.rs  widget_base.rs  widget_reconciler.rs
crates/waft-ui-gtk/tests/: integration_tests.rs
crates/waft/src/: action_tracker.rs  claim_tracker.rs  cli.rs  commands_command.rs  connection.rs  crash_tracker.rs  daemon.rs  lib.rs  main.rs  plugin_discovery.rs  plugin_spawner.rs  protocol_command.rs  query_command.rs  registry.rs  socket_io.rs
crates/waft/tests/: tier1_entity_routing.rs  tier2_action_routing.rs  tier2_multi_subscriber.rs
plugins/agenda/: Cargo.toml
plugins/agenda/src/: dbus.rs  lib.rs  values.rs  widget.rs
plugins/audio/: Cargo.toml  README.md
plugins/audio/src/: control_widget.rs  dbus.rs  dbus_tests.rs  device_menu.rs  lib.rs  pactl.rs  pactl_tests.rs  slider_control.rs  store.rs  virtual_device_config.rs
plugins/battery/: Cargo.toml  README.md
plugins/battery/src/: dbus.rs  lib.rs  store.rs  ui.rs  values.rs
plugins/blueman/: Cargo.toml  README.md
plugins/blueman/src/: dbus.rs  device_menu.rs  lib.rs  signal_monitor.rs  state.rs  widget_builder.rs
plugins/bluez/: Cargo.toml  README.md
plugins/bluez/src/: dbus.rs  signal_monitor.rs  state.rs
plugins/brightness/: Cargo.toml  README.md
plugins/brightness/src/: control_widget.rs  dbus.rs  display_menu.rs  lib.rs  slider_control.rs  store.rs
plugins/caffeine/: Cargo.toml  README.md
plugins/caffeine/src/: backends.rs  lib.rs  store.rs
plugins/claude/: Cargo.toml  README.md
plugins/claude/src/: api.rs  credentials.rs  lib.rs
plugins/clock/: Cargo.toml  README.md
plugins/clock/src/: lib.rs
plugins/darkman/: Cargo.toml  README.md
plugins/darkman/src/: config.rs  dbus.rs  lib.rs  store.rs  values.rs
plugins/darkman/tests/: daemon_integration.rs
plugins/eds/: Cargo.toml  README.md
plugins/eds-agenda/: Cargo.toml
plugins/eds-agenda/src/: dbus.rs  lib.rs  store.rs  values.rs  widget.rs
plugins/gnome-online-accounts/: Cargo.toml  README.md
plugins/gnome-online-accounts/src/: dbus.rs  signal_monitor.rs  state.rs
plugins/internal-apps/: Cargo.toml
plugins/keyboard-layout/: Cargo.toml  README.md
plugins/keyboard-layout/src/: lib.rs  widget.rs
plugins/networkmanager/: Cargo.toml  README.md
plugins/networkmanager/src/: bluez_discovery.rs  bluez_signal_monitor.rs  dbus.rs  dbus_property.rs  device_discovery.rs  ethernet.rs  ethernet_menu.rs  ip_config.rs  lib.rs  mod.rs  runtime_bridge.rs  signal_monitor.rs  state.rs  store.rs  tethering.rs  vpn.rs  vpn_menu.rs  vpn_toggle.rs  vpn_widget.rs  widget_builder.rs  wifi.rs  wifi_adapter_widget.rs  wifi_icon.rs  wifi_menu.rs  wifi_scan.rs  wifi_toggle.rs  wired_adapter_widget.rs  wired_toggle_widget.rs
plugins/niri/: Cargo.toml  README.md
plugins/niri/src/: commands.rs  config.rs  display.rs  event_stream.rs  keyboard.rs  lib.rs  state.rs
widget-docs/: Cargo.toml
widget-docs/src/: main.rs  markdown.rs  screenshot.rs  states.rs
(+955 files in other folders)
