[workspace]
resolver = "2"
members = [
    "crates/config",
    "crates/i18n",
    "crates/ipc",
    "crates/overview",
    "crates/core",
    "crates/plugin",
    "crates/protocol",
    "crates/toasts",
    "crates/waft",
    "crates/waft-ui-gtk",
    "plugins/clock",
    "plugins/darkman",
    "plugins/eds",
    "plugins/battery",
    "plugins/blueman",
    "plugins/brightness",
    "plugins/caffeine",
    "plugins/sunsetr",
    "plugins/systemd-actions",
    "plugins/weather",
    "plugins/keyboard-layout",
    "plugins/networkmanager",
    "plugins/audio",
    "plugins/notifications",
    "plugins/syncthing",
]
