[workspace]
resolver = "2"
members = [
    "crates/client",
    "crates/config",
    "crates/i18n",
    "crates/ipc",
    "crates/overview",
    "crates/core",
    "crates/plugin",
    "crates/protocol",
    "crates/toasts",
    "crates/settings",
    "crates/launcher",
    "crates/waft",
    "crates/test-harness",
    "crates/waft-ui-gtk",
    "plugins/clock",
    "plugins/darkman",
    "plugins/eds",
    "plugins/gsettings",
    "plugins/battery",
    "plugins/bluez",
    "plugins/brightness",
    "plugins/caffeine",
    "plugins/sunsetr",
    "plugins/systemd",
    "plugins/weather",
    "plugins/keyboard-layout",
    "plugins/networkmanager",
    "plugins/audio",
    "plugins/notifications",
    "plugins/syncthing",
    "plugins/swww",
    "plugins/internal-apps",
    "plugins/xdg-apps",
    "plugins/niri",
]
