[workspace]
resolver = "2"
members = [
    "crates/client",
    "crates/config",
    "crates/i18n",
    "crates/ipc",
    "crates/overview",
    "crates/core",
    "crates/plugin",
    "crates/protocol",
    "crates/toasts",
    "crates/settings",
    "crates/launcher",
    "crates/waft",
    "crates/test-harness",
    "crates/waft-ui-gtk",
    "plugins/clock",
    "plugins/darkman",
    "plugins/eds",
    "plugins/gnome-online-accounts",
    "plugins/gsettings",
    "plugins/battery",
    "plugins/bluez",
    "plugins/brightness",
    "plugins/caffeine",
    "plugins/sunsetr",
    "plugins/systemd",
    "plugins/weather",
    "plugins/keyboard-layout",
    "plugins/networkmanager",
    "plugins/audio",
    "plugins/notifications",
    "plugins/syncthing",
    "plugins/claude",
    "plugins/awww",
    "plugins/internal-apps",
    "plugins/xdg-apps",
    "plugins/niri",
]

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
# Correctness & safety
enum_glob_use = "warn"
manual_let_else = "warn"
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "warn"
uninlined_format_args = "warn"

# Development markers — flag but don't block
todo = "warn"
unimplemented = "warn"

# Encourage proper error handling over panicking
unwrap_used = "warn"
