[package]
name = "widget-docs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "widget-docs"
path = "src/main.rs"

[dependencies]
gtk = { version = "0.10", package = "gtk4", features = ["v4_6"] }
gdk = { version = "0.10", package = "gdk4-x11" }
adw = { version = "0.8", package = "libadwaita", features = ["v1_5"] }
waft-ui-gtk = { path = "../crates/waft-ui-gtk" }
waft-core = { path = "../crates/core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
cairo-rs = { version = "0.21", features = ["png"] }

[dev-dependencies]
