[package]
name = "waft-client"
version = "0.1.0"
edition = "2024"

[dependencies]
waft-protocol = { path = "../protocol" }
tokio = { version = "1", features = ["net", "io-util", "time"] }
flume = "0.12"
serde = "1"
serde_json = "1"
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
zbus = { version = "5", default-features = false, features = ["tokio"] }
libc = "0.2"

[lints]
workspace = true
