[package]
name = "waft-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
futures-util = "0.3"
log = "0.4"
tokio = { version = "1", features = ["sync"] }
waft-config = { path = "../config" }
zbus = { version = "5", default-features = false, features = ["tokio"] }
zvariant = "5"

[lints]
workspace = true
