[package]
name = "waft-overview"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "waft-overview"
path = "src/main.rs"

[dependencies]
adw = { version = "0.8.1", package = "libadwaita", features = ["v1_5"] }
anyhow = "1"
async-channel = "2"
async-trait = "0.1"
env_logger = "0.11"
fluent-bundle = "0.15"
flume = "0.12"
futures-util = "0.3"
gio = "0.20"
gtk = { version = "0.10", package = "gtk4", features = ["v4_6"] }
glib = "0.21"
gtk4-layer-shell = "0.7.1"
libc = "0.2"
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "unstable"] }
wayland-sys = "0.31"
log = "0.4"
nmrs = "2.0"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sys-locale = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "io-util", "time", "process"] }
tokio-stream = "0.1.18"
toml = "0.8"
unic-langid = "0.9"
dirs = "5"
zbus = { version = "5", default-features = false, features = ["tokio"] }
zvariant = "5"
indexmap = "2.13.0"
reqwest = { version = "0.12", features = ["json"] }
roxmltree = "0.20"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
uuid = { version = "1.0", features = ["v4"] }
waft-client = { path = "../client" }
waft-config = { path = "../config" }
waft-core = { path = "../core" }
waft-ipc = { path = "../ipc" }
waft-protocol = { path = "../protocol" }
waft-ui-gtk = { path = "../waft-ui-gtk" }
