[package]
name = "waft-plugin-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
waft-ipc = { path = "../ipc" }
tokio = { version = "1", features = ["net", "io-util", "sync", "rt", "rt-multi-thread", "macros", "time"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
libc = "0.2"

[dev-dependencies]
env_logger = "0.11"
