[package]
name = "waft-plugin-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
waft-ipc = { path = "../ipc" }
tokio = { version = "1", features = ["net", "io-util", "sync", "rt", "rt-multi-thread", "macros", "time"] }
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
async-trait = "0.1"
libc = "0.2"
anyhow = "1"
futures-util = "0.3"
zbus = { version = "5", default-features = false, features = ["tokio"] }
