[package]
name = "waft-plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
waft-protocol = { path = "../protocol" }
waft-i18n = { path = "../i18n" }
tokio = { version = "1", features = ["net", "io-util", "sync", "rt", "rt-multi-thread", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
log = "0.4"
env_logger = "0.11"
toml = "0.8"
dirs = "6"
anyhow = "1"
futures-util = "0.3"
zbus = { version = "5", default-features = false, features = ["tokio"] }
uuid = { version = "1", features = ["v4"] }
libc = "0.2"
