[package]
name = "waft-settings"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "waft-settings"
path = "src/main.rs"

[dependencies]
adw = { version = "0.8", package = "libadwaita", features = ["v1_5"] }
gtk = { version = "0.10", package = "gtk4", features = ["v4_6"] }
glib = "0.21"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "io-util", "time"] }
flume = "0.12"
log = "0.4"
env_logger = "0.11"
serde_json = "1"
waft-client = { path = "../client" }
waft-protocol = { path = "../protocol" }
waft-ui-gtk = { path = "../waft-ui-gtk" }
