[package]
name = "waft-settings"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "waft-settings"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
adw = { version = "0.8", package = "libadwaita", features = ["v1_5"] }
base64 = "0.22"
gtk = { version = "0.10", package = "gtk4", features = ["v4_10"] }
glib = "0.21"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "io-util", "time"] }
flume = "0.12"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2"
waft-client = { path = "../client" }
waft-protocol = { path = "../protocol" }
waft-i18n = { path = "../i18n" }
waft-ui-gtk = { path = "../waft-ui-gtk" }
kdl = { version = "6", features = ["v1-fallback"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
