[package]
name = "waft-ui-gtk"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk = { version = "0.10", package = "gtk4", features = ["v4_6"] }
adw = { version = "0.8", package = "libadwaita", features = ["v1_5"] }
waft-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
