[package]
name = "waft"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "waft"
path = "src/main.rs"

[dependencies]
waft-protocol = { path = "../protocol" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
