[package]
name = "waft-plugin-audio"
version = "0.1.0"
edition = "2024"

[lib]

[[bin]]
name = "waft-audio-daemon"
path = "bin/waft-audio-daemon.rs"

[dependencies]
waft-plugin-sdk = { path = "../../crates/plugin-sdk" }
waft-ipc = { path = "../../crates/ipc" }
async-trait = "0.1"
anyhow = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
