[package]
name = "waft-plugin-audio"
version = "0.1.0"
edition = "2024"

[lib]

[[bin]]
name = "waft-audio-daemon"
path = "bin/waft-audio-daemon.rs"

[dependencies]
waft-plugin = { path = "../../crates/plugin" }
waft-protocol = { path = "../../crates/protocol" }
async-trait = "0.1"
anyhow = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
