[package]
name = "waft-plugin-audio"
version = "0.1.0"
edition = "2024"

[lib]

[[bin]]
name = "waft-audio-daemon"
path = "bin/waft-audio-daemon.rs"

[dependencies]
waft-plugin = { path = "../../crates/plugin" }
waft-config = { path = "../../crates/config" }
waft-i18n = { path = "../../crates/i18n" }
waft-protocol = { path = "../../crates/protocol" }
async-trait = "0.1"
anyhow = "1"
dirs = "5"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"

[lints]
workspace = true
