[package]
name = "waft-plugin-bluetooth"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "waft-blueman-daemon"
path = "bin/waft-blueman-daemon.rs"

[dependencies]
waft-plugin-sdk = { path = "../../crates/plugin-sdk" }
waft-ipc = { path = "../../crates/ipc" }
async-trait = "0.1"
anyhow = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
zbus = "5"
futures-util = "0.3"
env_logger = "0.11"
