[package]
name = "waft-plugin-bluetooth"
version = "0.1.0"
edition = "2024"

[lib]

[[bin]]
name = "waft-bluez-daemon"
path = "bin/waft-bluez-daemon.rs"

[dependencies]
waft-plugin = { path = "../../crates/plugin" }
waft-protocol = { path = "../../crates/protocol" }
async-trait = "0.1"
anyhow = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
futures-util = "0.3"
serde_json = "1"
