[package]
name = "waft-plugin-brightness"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "waft-brightness-daemon"
path = "bin/waft-brightness-daemon.rs"

[dependencies]
waft-plugin-sdk = { path = "../../crates/plugin-sdk" }
waft-ipc = { path = "../../crates/ipc" }
async-trait = "0.1"
anyhow = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
