[package]
name = "waft-plugin-caffeine"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "waft-caffeine-daemon"
path = "bin/waft-caffeine-daemon.rs"

[dependencies]
waft-plugin-sdk = { path = "../../crates/plugin-sdk" }
waft-ipc = { path = "../../crates/ipc" }
async-trait = "0.1"
anyhow = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
zbus = "5"
env_logger = "0.11"
