[package]
name = "waft-plugin-caffeine"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "waft-caffeine-daemon"
path = "bin/waft-caffeine-daemon.rs"

[dependencies]
waft-plugin = { path = "../../crates/plugin" }
waft-i18n = { path = "../../crates/i18n" }
waft-protocol = { path = "../../crates/protocol" }
async-trait = "0.1"
anyhow = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
