[package]
name = "waft-plugin-claude"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "waft-claude-daemon"
path = "bin/waft-claude-daemon.rs"

[dependencies]
waft-plugin = { path = "../../crates/plugin" }
waft-protocol = { path = "../../crates/protocol" }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"

[dev-dependencies]
tempfile = "3"
