[package]
name = "waft-plugin-clock"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "waft-clock-daemon"
path = "bin/waft-clock-daemon.rs"

[dependencies]
waft-plugin = { path = "../../crates/plugin" }
waft-protocol = { path = "../../crates/protocol" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["unstable-locales"] }
waft-i18n = { path = "../../crates/i18n" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"

[lints]
workspace = true
