[package]
name = "waft-plugin-darkman"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "waft-darkman-daemon"
path = "bin/waft-darkman-daemon.rs"

[dependencies]
# Daemon binary dependencies
waft-plugin-sdk = { path = "../../crates/plugin-sdk" }
waft-ipc = { path = "../../crates/ipc" }
async-trait = "0.1"
anyhow = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
zbus = "5"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
env_logger = "0.11"

[dev-dependencies]
waft-overview = { path = "../../crates/overview" }
libc = "0.2"
