[package]
name = "waft-plugin-darkman"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "waft-darkman-daemon"
path = "bin/waft-darkman-daemon.rs"

[dependencies]
waft-plugin = { path = "../../crates/plugin" }
waft-protocol = { path = "../../crates/protocol" }
async-trait = "0.1"
anyhow = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
