[package]
name = "waft-plugin-agenda"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "waft-eds-agenda-daemon"
path = "bin/main.rs"

[lib]
crate-type = ["rlib"]

[dependencies]
waft-plugin-sdk = { path = "../../crates/plugin-sdk" }
waft-core = { path = "../../crates/core" }
waft-ipc = { path = "../../crates/ipc" }
async-trait = "0.1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
flume = "0.12"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
zbus = { version = "5", default-features = false, features = ["tokio"] }
zvariant = "5"
