[package]
name = "waft-plugin-eds"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "waft-eds-daemon"
path = "bin/waft-eds-daemon.rs"

[dependencies]
waft-plugin = { path = "../../crates/plugin" }
waft-i18n = { path = "../../crates/i18n" }
waft-protocol = { path = "../../crates/protocol" }
async-trait = "0.1"
anyhow = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
serde = { version = "1", features = ["derive"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
zvariant = "5"
