[package]
name = "waft-plugin-gnome-online-accounts"
version = "0.1.0"
edition = "2024"

[lib]

[[bin]]
name = "waft-gnome-online-accounts-daemon"
path = "bin/waft-gnome-online-accounts-daemon.rs"

[dependencies]
waft-plugin = { path = "../../crates/plugin" }
waft-i18n = { path = "../../crates/i18n" }
waft-protocol = { path = "../../crates/protocol" }
async-trait = "0.1"
anyhow = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
futures-util = "0.3"
serde_json = "1"

[lints]
workspace = true
