[package]
name = "waft-plugin-internal-apps"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "waft-internal-apps-daemon"
path = "bin/waft-internal-apps-daemon.rs"

[dependencies]
waft-plugin = { path = "../../crates/plugin" }
waft-protocol = { path = "../../crates/protocol" }
async-trait = "0.1"
anyhow = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
