[package]
name = "waft-plugin-keyboard-layout"
version = "0.1.0"
edition = "2024"

[lib]

[[bin]]
name = "waft-keyboard-layout-daemon"
path = "bin/waft-keyboard-layout-daemon.rs"

[dependencies]
waft-plugin = { path = "../../crates/plugin" }
waft-i18n = { path = "../../crates/i18n" }
waft-protocol = { path = "../../crates/protocol" }
async-trait = "0.1"
anyhow = "1"
flume = "0.12"
futures-util = "0.3"
log = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zbus = { version = "5", default-features = false, features = ["tokio"] }
