[package]
name = "waft-plugin-niri"
version = "0.1.0"
edition = "2024"

[lib]

[[bin]]
name = "waft-niri-daemon"
path = "bin/waft-niri-daemon.rs"

[dependencies]
waft-plugin = { path = "../../crates/plugin" }
waft-i18n = { path = "../../crates/i18n" }
waft-protocol = { path = "../../crates/protocol" }
async-trait = "0.1"
anyhow = "1"
flume = "0.12"
kdl = { version = "6", features = ["v1-fallback"] }
log = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
